@@ -1,8 +1,8 @@
 package org.evomaster.client.java.controller;
 
 import com.ea.agentloader.AgentLoader;
-import org.evomaster.client.java.controller.internal.db.StandardOutputTracker;
 import org.evomaster.client.java.controller.internal.SutController;
+import org.evomaster.client.java.instrumentation.Constants;
 import org.evomaster.client.java.instrumentation.InstrumentingAgent;
 
 /**
@@ -27,6 +27,14 @@ public class InstrumentedSutStarter {
         //AgentLoader.loadAgentClass(InstrumentingAgent.class.getName(), "foobar_packagenameshouldnotexist.");
     }
 
+
+    /**
+     *   Annoying settings needed for JDK 17 :(
+     *
+     *   Update docs/jdks.md if this changes
+     */
+    public static final String JDK_17_JVM_OPTIONS = "--add-opens java.base/java.util.regex=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED";
+
     private static boolean alreadyLoaded = false;
 
     private final SutController sutController;
@@ -34,11 +42,28 @@ public class InstrumentedSutStarter {
     public static void loadAgent(){
         if(! alreadyLoaded){
             alreadyLoaded = true;
-            AgentLoader.loadAgentClass(InstrumentingAgent.class.getName(), "foobar_packagenameshouldnotexist.");
+            try {
+                AgentLoader.loadAgentClass(InstrumentingAgent.class.getName(), "foobar_packagenameshouldnotexist.");
+            } catch (Exception e){
+                throw new RuntimeException(
+                        "\nFailed to apply bytecode instrumentation with JavaAgent." +
+                        "\nIf you are using JDK 11 or above, are you sure you added the following JVM option?" +
+                        "\n -Djdk.attach.allowAttachSelf=true " +
+                        "\nAlso, if you are using JDK 17 or above, you also need the following:" +
+                        "\n"+JDK_17_JVM_OPTIONS+
+                        "\nThis can also be set globally with the JDK_JAVA_OPTIONS environment variable."+
+                        "\nSee documentation at https://github.com/EMResearch/EvoMaster/blob/master/docs/jdks.md", e);
+            }
         }
     }
 
     public InstrumentedSutStarter(SutController sutController) {
+
+        //need to be called before ClassesToExclude is loaded into memory
+        String toSkip = sutController.packagesToSkipInstrumentation();
+        if(toSkip != null && !toSkip.isEmpty()) {
+            System.setProperty(Constants.PROP_SKIP_CLASSES, toSkip);
+        }
 
         this.sutController = sutController;
 
